# FlashMode

./: .gitignore  .pre-commit-config.yaml  README.md  fly.toml  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  tox.ini
dashboard/: urls.py  views.py
dashboard/templates/dashboard/: index.html
flash_mode/: settings.py  urls.py  views.py
src/: manage.py  scripts.py
src/apps/commando/management/commands/: dev.py  populate_db.py  vendor_pull.py
src/apps/core/: model_factories.py  views.py
src/apps/core/templates/core/: index.html
src/apps/core/tests/: test_views.py
src/apps/dashboard/: model_factories.py  models.py  urls.py  views.py
src/apps/dashboard/migrations/: 0001_initial.py  0002_alter_profile_streak_and_more.py
src/apps/dashboard/tests/: test_views.py
src/apps/decks/: forms.py  model_factories.py  models.py  tests.py  urls.py  views.py
src/apps/decks/migrations/: 0001_initial.py  0002_alter_deck_creator.py  0003_alter_deck_title.py  0004_alter_deck_title.py
src/apps/decks/templates/: study_session_guest.html
src/apps/decks/views/: card_edit.py  card_list.py  deck_collect.py  deck_detail.py  deck_edit.py  deck_list.py  deck_play.py  study_session.py  study_session_guest.py
src/apps/study_sessions/: apps.py  model_factories.py  models.py  urls.py  views.py
src/apps/study_sessions/migrations/: 0001_initial.py  0002_alter_response_is_correct.py  0002_studysession_deck_alter_response_card.py  0003_alter_response_is_correct.py  0004_alter_studysession_create_date.py  0005_alter_studysession_create_date.py
src/apps/study_sessions/tests/: test_models.py  test_views.py
src/commando/management/commands/: vendor_pull.py
src/dashboard/: models.py  urls.py  views.py
src/dashboard/migrations/: 0001_initial.py
src/dashboard/templates/dashboard/: index.html
src/deck_manager/: apps.py
src/deck_player/: apps.py
src/decks/: models.py
src/flash_mode/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/static/styles/: input.css  output.css
src/study_sessions/: models.py
src/templates/: components.yaml  index.html
src/templates/account/: login.html  password_change.html
src/templates/allauth/layouts/: base.html
src/templates/components/nav/: topbar.html
src/templates/layout/: base.html
src/templates/layouts/: nav.html  root.html
src/templates/nonoverrides/: index.html
src/templates/nonoverrides/layouts/: nav.html  root.html
src/utils/: __init__.py  download.py
templates/: index.html
templates/layout/: base.html  nav.html  navbars.html
(+62 files in other folders)
