[tool.poetry]
name = "flashmode"
version = "0.1.0"
description = ""
authors = ["David <david@semke.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-decouple = "^3.8"
psycopg = {extras = ["binary"], version = "^3.2.3"}
dj-database-url = "^2.2.0"
requests = "^2.32.3"
whitenoise = "^6.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "basic"