[tool.poetry]
name = "flashmode"
version = "0.1.0"
description = ""
authors = ["David <david@semke.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-decouple = "^3.8"
psycopg = {extras = ["binary"], version = "^3.2.3"}
dj-database-url = "^2.2.0"
requests = "^2.32.3"
whitenoise = "^6.7.0"
django-allauth = {extras = ["socialaccount"], version = "^65.0.2"}
django-allauth-ui = "^1.5.0"
django-widget-tweaks = "^1.5.0"
slippers = "^0.6.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.3"
django-debug-toolbar = "^4.4.6"
django-browser-reload = "^1.17.0"
rich = "^13.9.3"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "basic"