[tool.poetry]
name = "flashmode"
version = "0.1.0"
description = "A web app for studying with flash cards."
authors = ["David <david@semke.ca>"]
readme = "README.md"
packages = [
    { include = 'src'}
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-decouple = "^3.8"
psycopg = {extras = ["binary"], version = "^3.2.3"}
dj-database-url = "^2.2.0"
requests = "^2.32.3"
whitenoise = "^6.7.0"
django-allauth = {extras = ["socialaccount"], version = "^65.0.2"}
django-allauth-ui = "^1.5.0"
django-widget-tweaks = "^1.5.0"
slippers = "^0.6.2"
django-cotton = "^1.3.0"
gunicorn = "^23.0.0"
rich = "^13.9.4"
django-browser-reload = "^1.17.0"
django-debug-toolbar = "^5.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
